<resources>
    <string name="app_name">Android Toolbox</string>
    <string name="txt_notebook">Notebook</string>
    <string name="system_info">System Info</string>
    <string name="pdf_reader">PDF Reader</string>
    <string name="audio_player">Audio Player</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="timer">Timer</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="msg_sign_up">Don\'t have an account? <b>Sign up</b></string>
    <string name="msg_sign_in">Have an account? <b>Log in</b></string>
    <string name="msg_reset_password"><b>Forgot password?</b></string>
    <string name="add_new_note">Add New Note</string>
    <string name="logout">Logout</string>
    <string name="txt_pip">PIP</string>
    <string name="_0_0">0.0</string>
    <string name="note_title">Note Title…</string>
    <string name="file_name">File: empty</string>
    <string name="resume">Resume</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="cancel">Cancel</string>
    <string name="seconds">Seconds</string>
    <string name="pause">Pause</string>
    <string name="theme">Theme</string>
</resources>